--- a/src/main/resources/templates/customer-order-confirmation.html
+++ b/src/main/resources/templates/customer-order-confirmation.html
@@ -148,7 +148,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">DESILAND
+            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">YIMLY
             </h1>
         </div>
         <div align="center"
@@ -312,12 +312,12 @@
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The DESILAND Team
+                The YIMLY Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2025 DESILAND Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2025 YIMLY Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
