--- a/src/main/resources/templates/make-payment.html
+++ b/src/main/resources/templates/make-payment.html
@@ -158,7 +158,7 @@
 <body style="margin: 0 !important; padding: 0 !important;" >
 <div class="main-body">
     <div class="banner">
-        <h4>DESILAND</h4>
+        <h4>YIMLY</h4>
     </div>
     <div class="order-confirmation-header">
         <span>Your Order #<span th:utext="${order.reference}"></span> has been accepted</span>
@@ -344,12 +344,12 @@
             Best Regards,
         </p>
         <p style="font-style: italic;">
-            The DESILAND Team
+            The YIMLY Team
         </p>
     </div>
     <div class="footer-section">
         <p>
-            ©2024-2024 DESILAND Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+            ©2024-2024 YIMLY Ltd. Registered in Scotland. #SC595168. VAT No #295285756
         </p>
     </div>
 </div>
