--- a/src/main/resources/templates/customer-order-confirmation.html
+++ b/src/main/resources/templates/customer-order-confirmation.html
@@ -148,7 +148,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">pogogi
+            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">tinybit
             </h1>
         </div>
         <div align="center"
@@ -161,7 +161,7 @@
         <div align="center" class="confirmation-summary">
             <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #4b4848;"> Thanks for your order. 
                 We are happy to let you know that your order has been confirmed by your Chef. 
-                You can view the status of your order by visiting Your Orders on www.yimly.co.uk
+                You can view the status of your order by visiting Your Orders on www.tinybit.co.uk
             </p>
             <div th:if="${order.delivery}">
                 <p>
@@ -307,17 +307,17 @@
         </div>
         <hr>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.yimly.co.uk soon!</span>
+            <span>We hope to welcome you back to www.tinybit.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The pogogi Team
+                The tinybit Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2025 pogogi Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2025 tinybit Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
