Order status update

--- a/src/main/resources/templates/order-update.html
+++ b/src/main/resources/templates/order-update.html
@@ -148,7 +148,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">currific
+            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">homegrub
             </h1>
         </div>
         <div align="center"
@@ -317,17 +317,17 @@
             <hr>
         </div>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.currific.co.uk soon!</span>
+            <span>We hope to welcome you back to www.homegrub.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The currific Team
+                The HomeGrub Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2024 currific Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 HomeGrub Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
