--- a/src/main/resources/templates/make-payment.html
+++ b/src/main/resources/templates/make-payment.html
@@ -158,7 +158,7 @@
 <body style="margin: 0 !important; padding: 0 !important;" >
 <div class="main-body">
     <div class="banner">
-        <h4>currific</h4>
+        <h4>HomeGrub</h4>
     </div>
     <div class="order-confirmation-header">
         <span>Your Order #<span th:utext="${order.reference}"></span> has been accepted</span>
@@ -168,11 +168,11 @@
             We have submitted your order to your Chef. <br>
             We’ll let you know once your order confirmed by your Chef. You will receive another email from us
             with link to make payment.<br>
-            You can view the status of your order anytime by visiting on www.currific.co.uk/my_orders
+            You can view the status of your order anytime by visiting on www.homegrub.co.uk/my_orders
         </p>
         <p th:if="${status == 'DRAFT'}" style="font-size: 16px; font-weight: 400; line-height: 24px; color: #4b4848;">
             Your order still in Draft state. Please submit your order.
-            You can view the status of your order anytime by visiting on www.currific.co.uk/my_orders
+            You can view the status of your order anytime by visiting on www.homegrub.co.uk/my_orders
         </p>
     </div>
     <hr>
@@ -339,17 +339,17 @@
         </tr>
     </table>
     <div class="greetings-section">
-        <span>We hope to welcome you back to www.currific.co.uk soon!</span>
+        <span>We hope to welcome you back to www.homegrub.co.uk soon!</span>
         <p>
             Best Regards,
         </p>
         <p style="font-style: italic;">
-            The currific Team
+            The HomeGrub Team
         </p>
     </div>
     <div class="footer-section">
         <p>
-            ©2024-2024 currific Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+            ©2024-2024 HomeGrub Ltd. Registered in Scotland. #SC595168. VAT No #295285756
         </p>
     </div>
 </div>
