--- a/src/main/resources/templates/order-update.html
+++ b/src/main/resources/templates/order-update.html
@@ -148,7 +148,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">homegrub
+            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">Homegrub
             </h1>
         </div>
         <div align="center"
@@ -177,13 +177,17 @@
                                 <span th:utext="${cloudKitchen.address.addressLine1}"
                                     th:if="${cloudKitchen.address.addressLine1} != null"
                                     style="font-weight: 300;font-size: 12px;"></span>,
-                                <span th:utext="${cloudKitchen.address.addressLine2}" style="font-weight: 300;font-size: 12px;"
+                                <span th:utext="${cloudKitchen.address.addressLine2}"
+                                    style="font-weight: 300;font-size: 12px;"
                                     th:if="${cloudKitchen.address.addressLine2} != null"></span>,
-                                <span th:utext="${cloudKitchen.address.city}" th:if="${cloudKitchen.address.city} != null"
+                                <span th:utext="${cloudKitchen.address.city}"
+                                    th:if="${cloudKitchen.address.city} != null"
                                     style="font-weight: 300;font-size: 12px;"></span>,
-                                <span th:utext="${cloudKitchen.address.country}" style="font-weight: 300;font-size: 12px;"
+                                <span th:utext="${cloudKitchen.address.country}"
+                                    style="font-weight: 300;font-size: 12px;"
                                     th:if="${cloudKitchen.address.country} != null"></span>,
-                                <span th:utext="${cloudKitchen.address.postcode}" style="font-weight: 300;font-size: 12px;"
+                                <span th:utext="${cloudKitchen.address.postcode}"
+                                    style="font-weight: 300;font-size: 12px;"
                                     th:if="${cloudKitchen.address.postcode} != null"></span><br>
                             </div>
                         </div>
@@ -327,7 +331,7 @@
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2024 HomeGrub Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 Homegrub Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
