--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -150,7 +150,7 @@
 <body style="margin: 0 !important; padding: 0 !important;" >
     <div class="main-body">
         <div style="margin:30px 0;color: #ffb524;font-weight: 900;">
-            <h1>HomeGrub</h1>
+            <h1>Homegrub</h1>
         </div>
         <div class="order-header">
             <span>Your Order #<span th:utext="${order.reference}"/></span>
