--- a/src/main/resources/templates/order-update.html
+++ b/src/main/resources/templates/order-update.html
@@ -148,7 +148,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">Homegrub
+            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">EATem
             </h1>
         </div>
         <div align="center"
@@ -331,7 +331,7 @@
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2024 Homegrub Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 EATem Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
