--- a/src/main/resources/templates/order-update.html
+++ b/src/main/resources/templates/order-update.html
@@ -321,12 +321,12 @@
             <hr>
         </div>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.homegrub.co.uk soon!</span>
+            <span>We hope to welcome you back to www.eatem.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The HomeGrub Team
+                The EATem Team
             </p>
         </div>
         <div class="footer-section">
