--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -338,13 +338,13 @@
         </div>
 
         <div style="padding:5p 0x;margin:5px 0;">
-            <span>We hope to welcome you back to www.homegrub.co.uk soon!</span>
+            <span>We hope to welcome you back to www.eatem.co.uk soon!</span>
             <span>Best Regards,</span>
             <span>The Team</span>
         </div>
         <div style="padding:10px;margin:5px 0;background-color: #f3f3f3;">
             <p>
-                ©2024-2024 HomeGrub Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2023-2024 EATem Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
