--- a/src/main/resources/templates/payment-link.html
+++ b/src/main/resources/templates/payment-link.html
@@ -157,7 +157,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size:20px; font-weight: 200; margin: 0; line-height: 100px;color: red;">homegrub
+            <h1 style="font-size:20px; font-weight: 200; margin: 0; line-height: 100px;color: red;">EATem
             </h1>
         </div>
         <div style="font-size: 18px;padding: 10px;font-weight: 600; line-height: 20px;text-align: left;color: #212121;">
@@ -331,11 +331,11 @@
         <!--    <span style="font-weight:900;font-size:25px;margin-top:20px;padding: 10px;color: #212121;"  th:utext="${otp}"></span>-->
         <div style="margin-top:20px;font-size: 14px;line-height: 20px;text-align: left;color: #212121;padding: 0 10px;">
             If you need additional assistance, or you did not make this change, please contact
-            help.houseofchef@gmail.com
+            orders@eatem.co.uk
         </div>
         <div style="margin-top:50px;border-top:1px solid #f1f1f1;color: #d3d3d3;padding:20px 0;text-align:left;">
             <div>
-                © 2023 homegrub Limited. All Rights Reserved
+                © 2023 EATem Limited. All Rights Reserved
                 <br>
                 359, Glasgow Road, Glasgow, G760HE +44 141 644 0955
             </div>
