--- a/src/main/resources/templates/order-update.html
+++ b/src/main/resources/templates/order-update.html
@@ -51,11 +51,10 @@
 
         .banner {
             height: 100px;
-            background-color: #168a71;
+            color: #FFE01B;
             padding: 10px;
             width: 600px;
             margin: auto;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
 
         .confirmation-summary {
@@ -148,7 +147,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">EATem
+            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">zamosa
             </h1>
         </div>
         <div align="center"
@@ -326,12 +325,12 @@
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The EATem Team
+                The zamosa Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2024 EATem Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 zamosa Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
