--- a/src/main/resources/templates/customer-order-confirmation.html
+++ b/src/main/resources/templates/customer-order-confirmation.html
@@ -51,11 +51,10 @@
 
         .banner {
             height: 100px;
-            background-color: #168a71;
+            color: #FFE01B;
             padding: 10px;
             width: 600px;
             margin: auto;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
 
         .confirmation-summary {
@@ -148,7 +147,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">EATem
+            <h1 style="font-size: 36px; font-weight: 800; margin: 0; line-height: 100px;">zamosa
             </h1>
         </div>
         <div align="center"
@@ -161,7 +160,7 @@
         <div align="center" class="confirmation-summary">
             <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #4b4848;"> Thanks for your order. 
                 We are happy to let you know that your order has been confirmed by your kitchen. 
-                You can view the status of your order by visiting Your Orders on www.eatem.co.uk
+                You can view the status of your order by visiting Your Orders on www.zamosa.co.uk
             </p>
             <div th:if="${order.delivery}">
                 <p>
@@ -307,17 +306,17 @@
         </div>
         <hr>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.eatem.co.uk soon!</span>
+            <span>We hope to welcome you back to www.zamosa.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The EATem Team
+                The zamosa Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2025 EATem Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2025 zamosa Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
