--- a/src/main/resources/templates/make-payment.html
+++ b/src/main/resources/templates/make-payment.html
@@ -53,12 +53,11 @@
         }
 
         .banner {
-            height: 50px;
-            line-height: 50px;
+            height: 100px;
+            color: #FFE01B;
             padding: 10px;
             width: 600px;
             margin: auto;
-            font-family: "Bebas Neue", sans-serif;
         }
 
         .confirmation-summary {
@@ -158,7 +157,7 @@
 <body style="margin: 0 !important; padding: 0 !important;">
     <div class="main-body">
         <div class="banner">
-            <h4>EATem</h4>
+            <h4>zamosa</h4>
         </div>
         <div class="order-confirmation-header">
             <span>Your Order #<span th:utext="${order.reference}"></span> has been accepted</span>
@@ -166,15 +165,15 @@
         <div align="center" class="confirmation-summary">
             <p th:if="${status == 'PENDING'}"
                 style="font-size: 16px; font-weight: 400; line-height: 24px; color: #4b4848;">
-                We have submitted your order to your Chef. <br>
-                We’ll let you know once your order confirmed by your Chef. You will receive another email from us
+                We have submitted your order to your kitchen. <br>
+                We’ll let you know once your order confirmed by your kitchen. You will receive another email from us
                 with link to make payment.<br>
-                You can view the status of your order anytime by visiting on www.eatem.co.uk/my_orders
+                You can view the status of your order anytime by visiting on www.zamosa.co.uk/my_orders
             </p>
             <p th:if="${status == 'DRAFT'}"
                 style="font-size: 16px; font-weight: 400; line-height: 24px; color: #4b4848;">
                 Your order still in Draft state. Please submit your order.
-                You can view the status of your order anytime by visiting on www.eatem.co.uk/my_orders
+                You can view the status of your order anytime by visiting on www.zamosa.co.uk/my_orders
             </p>
         </div>
         <hr>
@@ -346,17 +345,17 @@
             </tr>
         </table>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.eatem.co.uk soon!</span>
+            <span>We hope to welcome you back to www.zamosa.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The EATem Team
+                The zamosa Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2024 EATem Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 zamosa Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
