--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
     <style type="text/css">
         @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
         body,
@@ -45,6 +46,7 @@
             margin: 0 !important;
             padding: 0 !important;
             width: 100% !important;
+            color: #222;
         }
 
         .main-body {
@@ -55,16 +57,17 @@
         .banner {
             height: 100px;
             color: #FFE01B;
-            padding: 10px;
-            width: 600px;
+            padding: 10px 0;
             margin: auto;
+            font-size: 30px;
+            font-weight: 900;
+            font-family: "Bricolage Grotesque", sans-serif;
         }
         .order-header{
             padding: 10px 0;
             font-size: 20px;
             color: #222;
             font-weight: 900;
-            border-bottom: 1px solid #f2f2f2;
         }
 
         .order-details {
@@ -101,7 +104,6 @@
         }
 
         .summary-item-value {
-            font-weight: bold;
             text-align: right;
         }
 
@@ -149,9 +151,7 @@
 </head>
 <body style="margin: 0 !important; padding: 0 !important;" >
     <div class="main-body">
-        <div style="margin:30px 0;color: #ffb524;font-weight: 900;">
-            <h1>zamosa</h1>
-        </div>
+        <span class="banner" style="font-family: 'Bricolage Grotesque', sans-serif;">EATm</span>
         <div class="order-header">
             <span>Your Order #<span th:utext="${order.reference}"/></span>
         </div>
@@ -161,7 +161,7 @@
                 <span th:utext="${msg}"></span>
             </div>
         </div>
-        <div style="border-bottom: 1px solid #e2e2e2;padding:5px 0;margin-bottom:5px;">
+        <div style="background-color:  #fcfcfc;padding:5px 0;margin-bottom:15px;">
             <div>
                 <span style="font-weight: 600;font-size: 20px;padding:10px 0;" th:utext="${cloudKitchen.name}"></span>
             </div>
@@ -173,69 +173,68 @@
                 <span th:utext="${cloudKitchen.address.postcode}" th:if="${cloudKitchen.address.postcode} != null"></span><br>
             </div>
         </div>
-        <div th:each="item: ${items}" style="border-bottom: 1px solid #e2e2e2;padding:3px 0;">
-            <div style="width: 100%;">
-                <table cellspacing="0" cellpadding="0" border="0" width="100% ">
-                    <tr width="100%" class="summary-item-row">
-                        <td width="5%" align="left"><span style="width: 5%;padding: 0 10px;font-weight: 600;"
-                                                          th:utext="${item.quantity}"></span></td>
-                        <td width="90%"><span style="font-weight: 600;" th:utext="${item.name}"></span></td>
-                        <td width="5%" align="right" style="font-weight: 600;"><span
-                                tyle="font-weight: 600;width: 5%;padding: 0 10px;" th:remove="tag"
-                                th:text="${#numbers.formatCurrency(item.price)}"></span></td>
-                    </tr>
-                    <tr width="100%" class="summary-item-row" th:if="${item.choice != null}">
-                        <td width="5%" align="left"><span style="font-weight: 300;padding: 0 10px;"
-                                                          th:utext="${item.choice.quantity}"></span></td>
-                        <td width="90%"><span style="font-weight: 300;" th:utext="${item.choice.name}"></span></td>
-                        <td width="5%" align="right"><span th:remove="tag" style="font-weight: 300;"
-                                                           th:text="${#numbers.formatCurrency(item.choice.price)}"></span></td>
-                    </tr>
-                    <tr width="100%" class="summary-item-row"
-                        th:if="${item.extras != null  && item.extras.size > 0}">
-                    <tr th:each="extra: ${item.extras}">
-                        <td width="5%" align="left"><span style="font-weight: 300;padding: 0 10px;"
-                                                          th:utext="${extra.quantity}"></span></td>
-                        <td width="90%"><span style="font-weight: 300;" th:utext="${extra.name}"></span></td>
-                        <td width="5%" align="right"><span style="font-weight: 300;" th:remove="tag"
-                                                           th:text="${#numbers.formatCurrency(extra.price)}"></span></td>
-                    </tr>
-                </table>
+        <div th:if="${items}">
+            <div th:each="item: ${items}" style="border-bottom: 1px solid #e2e2e2;padding:3px 0;">
+                <div style="width: 100%;">
+                    <table cellspacing="0" cellpadding="0" border="0" width="100% ">
+                        <tr width="100%" class="summary-item-row">
+                            <td width="5%" align="left"><span th:utext="${item.quantity}"></span></td>
+                            <td width="90%"><span th:utext="${item.name}"></span></td>
+                            <td width="5%" align="right"><span
+                                    style="width: 5%;padding: 0 10px;" th:remove="tag"
+                                    th:text="${#numbers.formatCurrency(item.price)}"></span></td>
+                        </tr>
+                        <tr width="100%" class="summary-item-row" th:if="${item.choice != null}">
+                            <td width="5%" align="left"><span style="padding: 0 10px;"
+                                                              th:utext="${item.choice.quantity}"></span></td>
+                            <td width="90%"><span th:utext="${item.choice.name}"></span></td>
+                            <td width="5%" align="right"><span th:remove="tag"
+                                                               th:text="${#numbers.formatCurrency(item.choice.price)}"></span></td>
+                        </tr>
+                        <tr width="100%" class="summary-item-row"
+                            th:if="${item.extras != null  && item.extras.size > 0}">
+                        <tr th:each="extra: ${item.extras}">
+                            <td width="5%" align="left"><span style="padding: 0 10px;"
+                                                              th:utext="${extra.quantity}"></span></td>
+                            <td width="90%"><span th:utext="${extra.name}"></span></td>
+                            <td width="5%" align="right"><span th:remove="tag"
+                                                               th:text="${#numbers.formatCurrency(extra.price)}"></span></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-<!--            <div style="display: flex;justify-content: space-between;width: 100%;">-->
-<!--                <div style="width: 60px;height: 60px;">-->
-<!--                    <img th:src="${item.image}" width="100%" height="100%" loading="lazy" style="object-fit: cover;">-->
-<!--                </div>-->
-<!--                <div style="width: 100%;">-->
-<!--                    <table cellspacing="0" cellpadding="0" border="0" width="100% ">-->
-<!--                        <tr width="100%" class="summary-item-row">-->
-<!--                            <td width="5%" align="left"><span style="width: 5%;padding: 0 10px;font-weight: 600;"-->
-<!--                                    th:utext="${item.quantity}"></span></td>-->
-<!--                            <td width="90%"><span style="font-weight: 600;" th:utext="${item.name}"></span></td>-->
-<!--                            <td width="5%" align="right" style="font-weight: 600;"><span-->
-<!--                                    tyle="font-weight: 600;width: 5%;padding: 0 10px;" th:remove="tag"-->
-<!--                                    th:text="${#numbers.formatCurrency(item.price)}"></span></td>-->
-<!--                        </tr>-->
-<!--                        <tr width="100%" class="summary-item-row" th:if="${item.choice != null}">-->
-<!--                            <td width="5%" align="left"><span style="font-weight: 300;padding: 0 10px;"-->
-<!--                                    th:utext="${item.choice.quantity}"></span></td>-->
-<!--                            <td width="90%"><span style="font-weight: 300;" th:utext="${item.choice.name}"></span></td>-->
-<!--                            <td width="5%" align="right"><span th:remove="tag" style="font-weight: 300;"-->
-<!--                                    th:text="${#numbers.formatCurrency(item.choice.price)}"></span></td>-->
-<!--                        </tr>-->
-<!--                        <tr width="100%" class="summary-item-row"-->
-<!--                            th:if="${item.extras != null  && item.extras.size > 0}">-->
-<!--                        <tr th:each="extra: ${item.extras}">-->
-<!--                            <td width="5%" align="left"><span style="font-weight: 300;padding: 0 10px;"-->
-<!--                                    th:utext="${extra.quantity}"></span></td>-->
-<!--                            <td width="90%"><span style="font-weight: 300;" th:utext="${extra.name}"></span></td>-->
-<!--                            <td width="5%" align="right"><span style="font-weight: 300;" th:remove="tag"-->
-<!--                                    th:text="${#numbers.formatCurrency(extra.price)}"></span></td>-->
-<!--                        </tr>-->
-<!--                    </table>-->
-<!--                </div>-->
-<!--            </div>-->
         </div>
+
+        <div th:if="${partyItems}">
+            <span style="font-size: 20px;font-weight: 900;margin: 10px 0;">Your Party Order</span>
+            <div th:each="partyItem: ${partyItems}" style="border-bottom: 1px solid #e2e2e2;padding:3px 0;">
+                <div style="width: 100%;">
+                    <table cellspacing="0" cellpadding="0" border="0" width="100% ">
+                        <tr width="100%" class="summary-item-row">
+                            <td width="5%" align="left"><span th:utext="${partyItem.quantity}"></span></td>
+                            <td width="90%"><span th:utext="${partyItem.name}"></span></td>
+                            <td width="5%" align="right"><span
+                                th:remove="tag"
+                                th:text="${#numbers.formatCurrency(partyItem.price)}"></span></td>
+                        </tr>
+                        <tr width="100%" th:each="candidate: ${partyItem.candidates}" style="border-bottom: 2px solid #e2e2e2;">
+                            <td colspan="3">
+                                <table cellspacing="0" cellpadding="0" border="0" width="100% ">
+                                    <tr width="100% ">
+                                        <td width="100%"><span style="font-weight: 900;" th:utext="${candidate.name}"></span></td>
+                                    </tr>
+                                    <tr th:each="candidateItem: ${candidate.items}" width="100% ">
+                                        <td width="100%"><span th:utext="${candidateItem.name}"></span></td>
+                                    </tr>
+                                </table>
+                            </td>
+                            
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+       
         <div style="border-bottom: 1px solid #e2e2e2;margin:3px 0;">
             <table cellspacing="0" cellpadding="0" border="0" width="100% ">
                 <tr width="100%" class="summary-item-row">
@@ -291,14 +290,17 @@
             </p>
             <hr>
         </div>
-        <div style="padding:5p 0x;margin:5px 0;" th:if="${serviceMode == 'DELIVERY'}">
-            <span style="font-weight: 800;margin-right: 10px; ">Estimated Delivery</span>: <span
-                th:utext="${#temporals.format(order.expectedDeliveryDate, 'dd MMM yyyy')}"></span>
-            <hr>
+        <div th:if="${serviceMode == 'DELIVERY'}">
+            <div th:if="${order.scheduledDate}" style="background: #dbf3fa;padding:10px;margin:5px 0;border-radius:14px;display: flex;gap: 10px;">
+                <span style="font-weight: 800;margin-right: 10px; display: block;" >Delivery Date </span>
+                <span th:utext="${#temporals.format(order.scheduledDate, 'dd MMM yyyy h:mm a')}"></span>
+            </div>
         </div>
-        <div th:if="${order.collectionDate}" style="background: #dbf3fa;padding:5px;margin:5px 0;border-radius:3px">
-            <span style="font-weight: 800;margin-right: 10px; display: block;" >Collection Date </span>: <span
-                th:utext="${#temporals.format(order.collectionDate, 'dd MMM yyyy')}"></span>
+        <div th:if="${serviceMode == 'COLLECTION'}">
+            <div th:if="${order.scheduledDate}" style="background: #dbf3fa;padding:10px;margin:5px 0;border-radius:14px;display: flex;gap: 10px;">
+                <span style="font-weight: 800;margin-right: 10px; display: block;" >Collection Date </span>
+                <span th:utext="${#temporals.format(order.scheduledDate, 'dd MMM yyyy h:mm a')}"></span>
+            </div>
         </div>
         <div style="background: #f9f9f9;padding:5px 10px;margin:10px 0;border-radius:6px" th:if="${serviceMode == 'COLLECTION'}">
             <p style="font-weight: 800; ">Collect At</p>
@@ -338,13 +340,13 @@
         </div>
 
         <div style="padding:5p 0x;margin:5px 0;">
-            <span>We hope to welcome you back to www.eatem.co.uk soon!</span>
+            <span>We hope to welcome you back to www.eatm.co.uk soon!</span>
             <span>Best Regards,</span>
-            <span>ZAMOSA</span>
+            <span>EATm</span>
         </div>
         <div style="padding:10px;margin:5px 0;background-color: #f3f3f3;">
             <p>
-                ©2023-2024 zamosa Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2023-2024 EATm Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
