--- a/src/main/resources/templates/customer-order-confirmation.html
+++ b/src/main/resources/templates/customer-order-confirmation.html
@@ -147,7 +147,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; line-height: 100px;">EATem
+            <h1 style="font-size: 36px; font-weight: 800; margin: 0; line-height: 100px;">zcoop
             </h1>
         </div>
         <div align="center"
@@ -160,7 +160,7 @@
         <div align="center" class="confirmation-summary">
             <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #4b4848;"> Thanks for your order. 
                 We are happy to let you know that your order has been confirmed by your kitchen. 
-                You can view the status of your order by visiting Your Orders on www.eatem.co.uk
+                You can view the status of your order by visiting Your Orders on www.zcoop.co.uk
             </p>
             <div th:if="${order.delivery}">
                 <p>
@@ -306,17 +306,17 @@
         </div>
         <hr>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.eatem.co.uk soon!</span>
+            <span>We hope to welcome you back to www.zcoop.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The EATem Team
+                The zcoop Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2025 EATem Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2025 zcoop Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
