--- a/src/main/resources/templates/order-update.html
+++ b/src/main/resources/templates/order-update.html
@@ -147,7 +147,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">EATem
+            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">zcoop
             </h1>
         </div>
         <div align="center"
@@ -320,17 +320,17 @@
             <hr>
         </div>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.eatem.co.uk soon!</span>
+            <span>We hope to welcome you back to www.zcoop.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The EATem Team
+                The zcoop Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2024 EATem Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 zcoop Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
