--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -151,7 +151,7 @@
 </head>
 <body style="margin: 0 !important; padding: 0 !important;" >
     <div class="main-body">
-        <span class="banner" style="font-family: 'Bricolage Grotesque', sans-serif;">EATm</span>
+        <span class="banner" style="font-family: 'Bricolage Grotesque', sans-serif;">zcoop</span>
         <div class="order-header">
             <span>Your Order #<span th:utext="${order.reference}"/></span>
         </div>
@@ -340,13 +340,13 @@
         </div>
 
         <div style="padding:5p 0x;margin:5px 0;">
-            <span>We hope to welcome you back to www.eatm.co.uk soon!</span>
+            <span>We hope to welcome you back to www.zcoop.co.uk soon!</span>
             <span>Best Regards,</span>
-            <span>EATm</span>
+            <span>zcoop</span>
         </div>
         <div style="padding:10px;margin:5px 0;background-color: #f3f3f3;">
             <p>
-                ©2023-2024 EATm Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2023-2024 Zcoop Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
