--- a/src/main/resources/templates/payment-link.html
+++ b/src/main/resources/templates/payment-link.html
@@ -156,7 +156,7 @@
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
         <div class="banner">
-            <h1 style="font-size:20px; font-weight: 200; margin: 0; line-height: 100px;">EATem
+            <h1 style="font-size:20px; font-weight: 200; margin: 0; line-height: 100px;">zcoop
             </h1>
         </div>
         <div style="font-size: 18px;padding: 10px;font-weight: 600; line-height: 20px;text-align: left;color: #212121;">
@@ -334,7 +334,7 @@
         </div>
         <div style="margin-top:50px;border-top:1px solid #f1f1f1;color: #d3d3d3;padding:20px 0;text-align:left;">
             <div>
-                © 2023 EATem Limited. All Rights Reserved
+                © 2023 zcoop Limited. All Rights Reserved
                 <br>
                 359, Glasgow Road, Glasgow, G760HE +44 141 644 0955
             </div>
