--- a/src/main/resources/templates/order-update.html
+++ b/src/main/resources/templates/order-update.html
@@ -146,10 +146,7 @@
 
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
-        <div class="banner">
-            <h1 style="font-size: 36px; font-weight: 800; margin: 0; color: #ffffff; line-height: 100px;">zcoop
-            </h1>
-        </div>
+        <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/e47120fc-bf36-43f5-ee60-d82148b6c100/public" style="height:40px;width:150px;object-fit:contain;">
         <div align="center"
             style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px;">
             <img src="https://img.icons8.com/carbon-copy/100/000000/checked-checkbox.png" width="125" height="120"
@@ -320,17 +317,17 @@
             <hr>
         </div>
         <div class="greetings-section">
-            <span>We hope to welcome you back to www.zcoop.co.uk soon!</span>
+            <span>We hope to welcome you back to www.okeat.co.uk soon!</span>
             <p>
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The zcoop Team
+                The OK EAT Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2024 zcoop Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2024-2024 OK EAT Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
