--- a/src/main/resources/templates/order-update.html
+++ b/src/main/resources/templates/order-update.html
@@ -146,7 +146,10 @@
 
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
-        <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/e47120fc-bf36-43f5-ee60-d82148b6c100/public" style="height:40px;width:150px;object-fit:contain;">
+        <div style="display:flex;flex-direction:column;gap:1rem;align-items:center;">
+            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/54846064-23ac-4f80-425c-4fc44f712200/public" style="height:40px;width:150px;object-fit:contain;">
+            <span style="font-weight: 900;font-size: 25px;">OK EAT</span>
+        </div>
         <div align="center"
             style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px;">
             <img src="https://img.icons8.com/carbon-copy/100/000000/checked-checkbox.png" width="125" height="120"
