--- a/src/main/resources/templates/make-payment.html
+++ b/src/main/resources/templates/make-payment.html
@@ -156,7 +156,10 @@
 
 <body style="margin: 0 !important; padding: 0 !important;">
     <div class="main-body">
-        <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/e47120fc-bf36-43f5-ee60-d82148b6c100/public" style="height:40px;width:150px;object-fit:contain;">
+        <div style="display:flex;flex-direction:column;gap:1rem;align-items:center;">
+            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/54846064-23ac-4f80-425c-4fc44f712200/public" style="height:40px;width:150px;object-fit:contain;">
+            <span style="font-weight: 900;font-size: 25px;">OK EAT</span>
+        </div>
         <div class="order-confirmation-header">
             <span>Your Order #<span th:utext="${order.reference}"></span> has been accepted</span>
         </div>
