--- a/src/main/resources/templates/payment-link.html
+++ b/src/main/resources/templates/payment-link.html
@@ -155,9 +155,9 @@
 
 <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
     <div class="main-body">
-        <div class="banner">
-            <h1 style="font-size:20px; font-weight: 200; margin: 0; line-height: 100px;">OK EAT
-            </h1>
+        <div style="display:flex;flex-direction:column;gap:1rem;align-items:center;">
+            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/54846064-23ac-4f80-425c-4fc44f712200/public" style="height:40px;width:150px;object-fit:contain;">
+            <span style="font-weight: 900;font-size: 25px;">OK EAT</span>
         </div>
         <div style="font-size: 18px;padding: 10px;font-weight: 600; line-height: 20px;text-align: left;color: #212121;">
             MAKE PAYMENT
