New changes in email template

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -151,8 +151,9 @@
 </head>
 <body style="margin: 0 !important; padding: 0 !important;" >
     <div class="main-body">
-        <div style="display:flex;flex-direction:column;gap:1rem;align-items:center;">
-            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/54846064-23ac-4f80-425c-4fc44f712200/public" style="height:40px;width:150px;object-fit:contain;">
+        <div style="display:flex;flex-direction:row;align-items:center;">
+            <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/54846064-23ac-4f80-425c-4fc44f712200/public"
+                style="height:40px;width:25px;object-fit:contain;">
             <span style="font-weight: 900;font-size: 25px;">OK EAT</span>
         </div>
         <div class="order-header">
