New changes in email template

--- a/src/main/resources/templates/customer-order-confirmation.html
+++ b/src/main/resources/templates/customer-order-confirmation.html
@@ -148,8 +148,8 @@
     <div class="main-body">
         <div style="display:flex;flex-direction:row;align-items:center;">
             <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/54846064-23ac-4f80-425c-4fc44f712200/public"
-                style="height:40px;width:25px;object-fit:contain;">
-            <span style="font-weight: 900;font-size: 25px;">OK EAT</span>
+                style="height:40px;width:30px;object-fit:contain;">
+            <span style="font-weight: 900;font-size: 18px;">Ok Eat</span>
         </div>
         
         <div align="center"
@@ -313,12 +313,12 @@
                 Best Regards,
             </p>
             <p style="font-style: italic;">
-                The OK EAT Team
+                The Ok Eat Team
             </p>
         </div>
         <div class="footer-section">
             <p>
-                ©2024-2025 OK EAT Ltd. Registered in Scotland. #SC595168. VAT No #295285756
+                ©2025 Ok Eat Ltd. Registered in Scotland. #SC595168. VAT No #295285756
             </p>
         </div>
     </div>
