--- a/src/main/resources/templates/payment-link.html
+++ b/src/main/resources/templates/payment-link.html
@@ -157,8 +157,8 @@
     <div class="main-body">
         <div style="display:flex;flex-direction:row;align-items:center;">
             <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/54846064-23ac-4f80-425c-4fc44f712200/public"
-                style="height:40px;width:25px;object-fit:contain;">
-            <span style="font-weight: 900;font-size: 25px;">OK EAT</span>
+                style="height:40px;width:30px;object-fit:contain;">
+            <span style="font-weight: 900;font-size: 18px;">Ok Eat</span>
         </div>
         <div style="font-size: 18px;padding: 10px;font-weight: 600; line-height: 20px;text-align: left;color: #212121;">
             MAKE PAYMENT
@@ -331,11 +331,11 @@
         <!--    <span style="font-weight:900;font-size:25px;margin-top:20px;padding: 10px;color: #212121;"  th:utext="${otp}"></span>-->
         <div style="margin-top:20px;font-size: 14px;line-height: 20px;text-align: left;color: #212121;padding: 0 10px;">
             If you need additional assistance, or you did not make this change, please contact
-            orders@okeat.co.uk
+            contact@okeat.co.uk
         </div>
         <div style="margin-top:50px;border-top:1px solid #f1f1f1;color: #d3d3d3;padding:20px 0;text-align:left;">
             <div>
-                © 2023 OK EAT Limited. All Rights Reserved
+                © 2023 Ok Eat Limited. All Rights Reserved
                 <br>
                 359, Glasgow Road, Glasgow, G760HE +44 141 644 0955
             </div>
