--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -52,6 +52,7 @@
         .main-body {
             width: 600px;
             margin: auto;
+            background-color: #fff;
         }
         
         .banner {
