--- a/src/main/resources/templates/order-update.html
+++ b/src/main/resources/templates/order-update.html
@@ -47,6 +47,7 @@
         .main-body {
             width: 600px;
             margin: auto;
+            background-color: #fff;
         }
         
         .banner {
