--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -150,7 +150,7 @@
 
 <body style="margin: 0 !important; padding: 0 !important;">
     <div class="main-body">
-        <div style=" height: 100px;width: 120px;">
+        <div style=" height: 150px;width: 170px;background-color: #FFF;">
             <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/a586651b-832d-4145-6d83-b9e9c601c100/public" style="height:100%;width:100%;object-fit:contain;">
         </div>
         <div class="order-header">
