--- a/src/main/resources/templates/payment-link.html
+++ b/src/main/resources/templates/payment-link.html
@@ -154,8 +154,8 @@
 
     <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
         <div class="main-body">
-            <div style=" display: flex;flex-direction: row;align-items: center; gap: 10px;">
-                <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/a586651b-832d-4145-6d83-b9e9c601c100/public" style="height:40px;width:30px;object-fit:contain;">
+            <div style=" height: 150px;width: 170px;background-color: #FFF;">
+                <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/a586651b-832d-4145-6d83-b9e9c601c100/public" style="height:100%;width:100%;object-fit:contain;">
             </div>
             <div style="font-size: 18px;padding: 10px;font-weight: 600; line-height: 20px;text-align: left;color: #212121;">
                 MAKE PAYMENT
