--- a/src/main/resources/templates/order-update.html
+++ b/src/main/resources/templates/order-update.html
@@ -145,8 +145,8 @@
 
     <body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
         <div class="main-body">
-            <div style=" display: flex;flex-direction: row;align-items: center; gap: 10px;">
-                <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/a586651b-832d-4145-6d83-b9e9c601c100/public" style="height:40px;width:30px;object-fit:contain;">
+            <div style=" height: 150px;width: 170px;background-color: #FFF;">
+                <img src="https://imagedelivery.net/AEAandXNB2C_FZ3VOFH8Dw/a586651b-832d-4145-6d83-b9e9c601c100/public" style="height:100%;width:100%;object-fit:contain;">
             </div>
             <div align="center" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px;">
                 <img src="https://img.icons8.com/carbon-copy/100/000000/checked-checkbox.png" width="125" height="120" style="display: block; border: 0px;" /><br>
